# Smart-Journal-App

./: .gitignore  build-wasm.ps1  package-lock.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/public/models/food/: config.json  model.safetensors
frontend/public/models/food/onnx/: decoder_model.onnx  decoder_model_merged.onnx  decoder_with_past_model.onnx  encoder_model.onnx  ort_config.json
frontend/public/wasm-ort/: ort-wasm-simd-threaded.jspi.mjs
frontend/src/: App.tsx  index.css  main.tsx  theme.d.ts
frontend/src/components/: sidebar.tsx  topbar.tsx
frontend/src/pages/: HomePage.tsx  JournalPage.tsx  StatisticsPage.tsx
frontend/src/workers/: foodWorker.ts
model/: data.py  food_ds.json  food_ds_long.json  train.py
wasm-t5/: Cargo.toml
wasm-t5/src/: lib.rs
